--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,13 +3,14 @@ name: Cypress Tests
 on: push
 
 jobs:
+
   cypress-run:
     runs-on: ubuntu-22.04
     steps:
+      - name: artifacts
+        uses: actions/download-artifact@v2.1.1
       - name: Checkout
         uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
