--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Cypress run
         uses: cypress-io/github-action@v2.2.7
         with:
+          working-directory: client
           build: npm run build
           start: npx cypress run
