--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,13 +5,12 @@ on: push
 jobs:
 
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-lastest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Cypress run
         uses: cypress-io/github-action@v2.2.7
         with:
-          working-directory: client
           build: npm run build
           start: npx cypress run
